--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -243,4 +243,10 @@
     <string name="terminal_theme_dark">Oscuro</string>
     <string name="terminal_theme_light">Claro</string>
     <string name="terminal_theme_ubuntu_dark">Ubuntu Oscuro</string>
+
+    <string name="miles_per_hour">MPH</string>
+    <string name="kilometers_per_hour">KM/H</string>
+    <string name="meters_per_second">M/S</string>
+    <string name="feet_per_second">FT/S</string>
+    <string name="knots">Knots</string>
 </resources>
