--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,7 @@
     <string name="scientific_calculator">Scientific Calculator</string>
     <string name="domain_error">Domain Error</string>
     <string name="parse_error">Parse Error</string>
+    <string name="error_nan">NaN</string>
 
 
     <string name="help_text" translatable="false">\n\nCurrently supported commands:\n
