--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
         \n8. The entire app is now available in Spanish and Italian! Big thanks to Lorenzo Vainigli on GitHub for adding Italian translations!
         \n9. The equals/clear animation is now a bit smoother.
         \n10. The changelog will now display one more previous version.
-        \n11. Added support for Android 13\'s "Themed Icons" feature.
+        \n11. Added support for Android 13\'s \"Themed Icons\" feature.
         \n12. Optimized more layouts for smaller devices.
         \n13. Many bug fixes and performance improvements.
 
